tests/type_errors/medium/and.py
x: int = 1 and 2 and 3

y: int = 1 and 2 and [1, 2, 3]

print(x)
print(y)
